Работаю над страницей категорий. Осталось сделать вид "списком"

--- a/pages/category.html
+++ b/pages/category.html
@@ -146,7 +146,7 @@
 <div class="container">
     <form action="#">
         <div class="form-row search_category">
-            <div class="col-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <select class="form-control" id="selectCategory">
                     <option>Принтеры/копиры</option>
                     <option>--Продажа принтеров/копиров</option>
@@ -157,13 +157,13 @@
                     <option>----Блоки проявки</option>
                 </select>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-8 col-lg-6">
                 <input type="text" class="form-control" placeholder="Что вы ищете">
             </div>
-            <div class="col-2">
+            <div class="col-12 col-md-4 col-lg-2">
                 <input type="text" class="form-control" placeholder="Местоположение">
             </div>
-            <div class="col-1">
+            <div class="col-12 col-md-4 col-lg-1">
                 <button type="submit" class="btn btn-warning">Поиск</button>
             </div>
         </div>
@@ -184,7 +184,7 @@
 <div class="container">
     <div class="row">
 <!--Блок фильтров-->
-        <div class="col-3">
+        <div class="col-12 col-sm-4 col-md-3 col-lg-3 order-1 order-sm-0">
             <div class="row">
                 <div class="col-12 category_filter">
                     <form>
@@ -269,7 +269,7 @@
             </div>
         </div>
 <!--Основной блок объявлений-->
-        <div class="col-9 block_ads">
+        <div class="col-12 col-sm-8 col-md-9 col-lg-9 block_ads order-0 order-sm-1">
 <!--Блок VIP объявлений, не более 4шт.-->
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 block_vip_ads">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12">
@@ -286,7 +286,7 @@
                             <h6>Продам принтер HP 1010 как новый!</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 3230 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 3230 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
 
                             <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
                             <p class="time">Сегодня, 11:34</p>
@@ -295,16 +295,16 @@
                 </div>
                 <div class="col ads highlight">
                     <div class="ads_wrapper">
-                        <a href="#" title="Струйник L800 для печати фотографий">
+                        <a href="#" title="Куплю L800 для печати фотографий">
                             <img src="../img/print_str.jpg">
                         </a>
                     </div>
                     <div>
-                        <a href="#" title="Струйник L800 для печати фотографий">
+                        <a href="#" title="Куплю L800 для печати фотографий">
                             <h6>Куплю L800 для печати фотографий</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 6000 руб.<span class="ads_buy"><i class="fa fa-search"></i></span></p>
+                            <p class="price"> 6000 руб.<span title="Покупка" class="ads_buy"><i class="fa fa-search"></i></span></p>
                             <p class="address"> г. Хабаровск</p>
                             <p class="time">Сегодня, 08:42</p>
                         </a>
@@ -322,7 +322,7 @@
                             <h6>Samsung SCX-4200 как новый</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 2500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 2500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Москва</p>
                             <p class="time">01.06.2021</p>
                         </a>
@@ -340,7 +340,7 @@
                             <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 4000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 4000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Владивосток, ул. Шоссейная</p>
                             <p class="time">01.06.2021</p>
                         </a>
@@ -391,7 +391,7 @@
                             <h6>Продам принтер HP 1010 как новый!</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 3230 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 3230 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
 
                             <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
                             <p class="time">Сегодня, 11:34</p>
@@ -401,16 +401,16 @@
                 </div>
                 <div class="col ads vip">
                     <div class="ads_wrapper">
-                        <a href="#" title="Струйник L800 для печати фотографий">
+                        <a href="#" title="Куплю L800 для печати фотографий">
                             <img src="../img/print_str.jpg">
                         </a>
                     </div>
                     <div>
-                        <a href="#" title="Струйник L800 для печати фотографий">
+                        <a href="#" title="Куплю L800 для печати фотографий">
                             <h6>Куплю L800 для печати фотографий</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 6000 руб.<span class="ads_buy"><i class="fa fa-search"></i></span></p>
+                            <p class="price"> 6000 руб.<span title="Покупка" class="ads_buy"><i class="fa fa-search"></i></span></p>
                             <p class="address"> г. Хабаровск</p>
                             <p class="time">Сегодня, 08:42</p>
                         </a>
@@ -428,7 +428,7 @@
                             <h6>Samsung SCX-4200 как новый</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 2500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 2500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Москва</p>
                             <p class="time">01.06.2021</p>
                         </a>
@@ -446,7 +446,7 @@
                             <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 4000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 4000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Владивосток, ул. Шоссейная</p>
                             <p class="time">01.06.2021</p>
                         </a>
@@ -464,7 +464,7 @@
                             <h6>Кнопочный Nokia, как новый</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Москва</p>
                             <p class="time">30.05.2021</p>
                         </a>
@@ -482,7 +482,7 @@
                             <h6>Телефон Huawei, на гарантии!</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 1500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 1500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Новосибирск, ул. Адмирала-Маршала, дом 43</p>
                             <p class="time">29.05.2021</p>
                         </a>
@@ -500,7 +500,7 @@
                             <h6>Раскладушка Motorolla, очень хорошо ловит сввязь</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 1000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 1000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Хабаровск</p>
                             <p class="time">28.05.2021</p>
                         </a>
@@ -518,7 +518,7 @@
                             <h6>Продам принтер HP 1010 как новый!</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 3230 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 3230 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
 
                             <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
                             <p class="time">Сегодня, 11:34</p>
@@ -537,7 +537,7 @@
                             <h6>Куплю L800 для печати фотографий</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 6000 руб.<span class="ads_buy"><i class="fa fa-search"></i></span></p>
+                            <p class="price"> 6000 руб.<span title="Продажа" class="ads_buy"><i class="fa fa-search"></i></span></p>
                             <p class="address"> г. Хабаровск</p>
                             <p class="time">Сегодня, 08:42</p>
                         </a>
@@ -555,7 +555,7 @@
                             <h6>Samsung SCX-4200 как новый</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 2500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 2500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Москва</p>
                             <p class="time">01.06.2021</p>
                         </a>
@@ -573,7 +573,7 @@
                             <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 4000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 4000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Владивосток, ул. Шоссейная</p>
                             <p class="time">01.06.2021</p>
                         </a>
@@ -591,7 +591,7 @@
                             <h6>Кнопочный Nokia, как новый</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Москва</p>
                             <p class="time">30.05.2021</p>
                         </a>
@@ -609,7 +609,7 @@
                             <h6>Телефон Huawei, на гарантии!</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 1500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 1500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Новосибирск, ул. Адмирала-Маршала, дом 43</p>
                             <p class="time">29.05.2021</p>
                         </a>
@@ -627,7 +627,7 @@
                             <h6>Раскладушка Motorolla, очень хорошо ловит сввязь</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 1000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 1000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Хабаровск</p>
                             <p class="time">28.05.2021</p>
                         </a>
@@ -645,7 +645,7 @@
                             <h6>Телефон Huawei, на гарантии!</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 1500 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 1500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Новосибирск, ул. Адмирала-Маршала, дом 43</p>
                             <p class="time">29.05.2021</p>
                         </a>
@@ -663,7 +663,7 @@
                             <h6>Раскладушка Motorolla, очень хорошо ловит сввязь</h6>
                         </a>
                         <a href="#">
-                            <p class="price"> 1000 руб.<span class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                            <p class="price"> 1000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
                             <p class="address"> г. Хабаровск</p>
                             <p class="time">28.05.2021</p>
                         </a>
@@ -671,8 +671,31 @@
                     </div>
                 </div>
             </div>
+            <div class="row navigation_pages">
+                <div class="col-12">
+                    <nav aria-label="Нумерация страниц">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#" aria-label="Предидущая"><span aria-hidden="true">&laquo;</span></a>
+                            </li>
+                            <li class="page-item active">
+                                <a class="page-link" href="#">1</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">2</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">3</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Следующая"><span aria-hidden="true">&raquo;</span></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <div class="col-12 banner_category_footer">
+        <div class="col-12 banner_category_footer order-2 order-sm-2">
             Блок под баннерную рекламу
         </div>
     </div>
