Вынес отображение объявлений в отдельный CSS. Сделал отображение списком.

--- a/pages/category_list.html
+++ b/pages/category_list.html
@@ -184,7 +184,7 @@
 <!--Блок фильтров и объявлений-->
 <div class="container">
     <div class="row">
-<!--Блок фильтров-->
+        <!--Блок фильтров-->
         <div class="col-12 col-sm-4 col-md-3 col-lg-3 order-1 order-sm-0">
             <div class="row">
                 <div class="col-12 category_filter">
@@ -269,9 +269,9 @@
                 </div>
             </div>
         </div>
-<!--Основной блок объявлений-->
+        <!--Основной блок объявлений-->
         <div class="col-12 col-sm-8 col-md-9 col-lg-9 block_ads order-0 order-sm-1">
-<!--Блок VIP объявлений, не более 4шт.-->
+            <!--Блок VIP объявлений, не более 4шт.-->
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 block_vip_ads">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                     <h4>VIP объявления</h4>
@@ -349,8 +349,8 @@
                     </div>
                 </div>
             </div>
-<!--Блок объявлений из категории-->
-<!--Строка блок выбора сортировки, количества и вида отображения-->
+            <!--Блок объявлений из категории-->
+            <!--Строка блок выбора сортировки, количества и вида отображения-->
             <div class="row justify-content-end sort">
                 <div class="col-3 col-sm-3 col-md-3 col-lg-2">
                     <form action="#">
@@ -380,9 +380,10 @@
                     </form>
                 </div>
             </div>
-<!--Объявления из категории-->
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
-                <div class="col ads">
+            <!--Объявления из категории-->
+            <!--Вид списком-->
+            <div class="row">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Продам принтер HP 1010 как новый!">
                             <img src="../img/print_main.jpg">
@@ -401,7 +402,7 @@
 
                     </div>
                 </div>
-                <div class="col ads vip">
+                <div class="col-12 ads ads_list vip">
                     <div class="ads_wrapper">
                         <a href="#" title="Куплю L800 для печати фотографий">
                             <img src="../img/print_str.jpg">
@@ -419,7 +420,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Samsung SCX-4200 как новый">
                             <img src="../img/printer_2.jpg">
@@ -437,7 +438,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
                             <img src="../img/noutebook.jpg">
@@ -455,7 +456,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Кнопочный Nokia, как новый">
                             <img src="../img/phone.jpg">
@@ -473,7 +474,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Телефон Huawei, на гарантии!">
                             <img src="../img/phone_4.jpg">
@@ -491,7 +492,7 @@
 
                     </div>
                 </div>
-                <div class="col ads highlight">
+                <div class="col-12 ads ads_list highlight">
                     <div class="ads_wrapper">
                         <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
                             <img src="../img/phone_2.jpg">
@@ -509,7 +510,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Продам принтер HP 1010 как новый!">
                             <img src="../img/print_main.jpg">
@@ -528,7 +529,7 @@
 
                     </div>
                 </div>
-                <div class="col ads vip">
+                <div class="col-12 ads ads_list vip">
                     <div class="ads_wrapper">
                         <a href="#" title="Струйник L800 для печати фотографий">
                             <img src="../img/print_str.jpg">
@@ -546,7 +547,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Samsung SCX-4200 как новый">
                             <img src="../img/printer_2.jpg">
@@ -564,7 +565,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
                             <img src="../img/noutebook.jpg">
@@ -582,7 +583,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Кнопочный Nokia, как новый">
                             <img src="../img/phone.jpg">
@@ -600,7 +601,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Телефон Huawei, на гарантии!">
                             <img src="../img/phone_4.jpg">
@@ -618,7 +619,7 @@
 
                     </div>
                 </div>
-                <div class="col ads highlight">
+                <div class="col-12 ads ads_list highlight">
                     <div class="ads_wrapper">
                         <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
                             <img src="../img/phone_2.jpg">
@@ -636,7 +637,7 @@
 
                     </div>
                 </div>
-                <div class="col ads">
+                <div class="col-12 ads ads_list">
                     <div class="ads_wrapper">
                         <a href="#" title="Телефон Huawei, на гарантии!">
                             <img src="../img/phone_4.jpg">
@@ -654,7 +655,7 @@
 
                     </div>
                 </div>
-                <div class="col ads highlight">
+                <div class="col-12 ads ads_list highlight">
                     <div class="ads_wrapper">
                         <a href="#" title="Раскладушка Motorolla, очень хорошо ловит сввязь">
                             <img src="../img/phone_2.jpg">
