Вставил на главную страницу правильные объявления

--- a/pages/category_list.html
+++ b/pages/category_list.html
@@ -369,7 +369,7 @@
             <div class="row justify-content-end sort">
                 <div class="col-3 col-sm-3 col-md-3 col-lg-2">
                     <form action="#">
-                        <select class="form-control form-control-sm" id="quantityAds">
+                        <select class="form-control form-control-sm" id="viewsAds">
                             <option>Сетка</option>
                             <option>Список</option>
                         </select>
