--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Корректировка стиля. -->
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/ads_views.css">
 
     <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
@@ -901,40 +902,76 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-9 goodsMain">
-                <h5>Последние объявления</h5>
-                <div class="row align-items-end">
-                    <div class="col-6 col-sm-4">
-                        <figure>
-                            <img src="img/print_str.jpg">
-                            <figcaption>
-                                <h6>Принтер Epson в рабочем состоянии как новый почти не печатал</h6>
-                                <p class="price">4500 руб.</p>
-                                <p class="city">г. Владивосток, ул. Краснознаменная, дом 18</p>
-                                <p class="dateTime">Сегодня, 12:06</p>
-                            </figcaption>
-                        </figure>
+                <h5>VIP объявления</h5>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+                    <div class="col ads highlight">
+                        <div class="ads_wrapper">
+                            <a href="#" title="Продам принтер HP 1010 как новый!">
+                                <img src="../img/print_main.jpg">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#" title="Продам принтер HP 1010 как новый!">
+                                <h6>Продам принтер HP 1010 как новый!</h6>
+                            </a>
+                            <a href="#">
+                                <p class="price"> 3230 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
+
+                                <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
+                                <p class="time">Сегодня, 11:34</p>
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-6 col-sm-4">
-                        <figure>
-                            <img src="img/noutebook.jpg">
-                            <figcaption>
-                                <h6>Разбита матрица на запчасти ноутбук Lenovo</h6>
-                                <p class="price">2500 руб.</p>
-                                <p class="city">г. Москва</p>
-                                <p class="dateTime">Сегодня, 07:53</p>
-                            </figcaption>
-                        </figure>
+                    <div class="col ads highlight">
+                        <div class="ads_wrapper">
+                            <a href="#" title="Куплю L800 для печати фотографий">
+                                <img src="../img/print_str.jpg">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#" title="Куплю L800 для печати фотографий">
+                                <h6>Куплю L800 для печати фотографий</h6>
+                            </a>
+                            <a href="#">
+                                <p class="price"> 6000 руб.<span title="Покупка" class="ads_buy"><i class="fa fa-search"></i></span></p>
+                                <p class="address"> г. Хабаровск</p>
+                                <p class="time">Сегодня, 08:42</p>
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-6 col-sm-4">
-                        <figure>
-                            <img src="img/printer_2.jpg">
-                            <figcaption>
-                                <h6>Samsung SCX-4200 на запчасти, не работает</h6>
-                                <p class="price">1000 руб.</p>
-                                <p class="city">г. Хабаровск, ул. Павла-Морозова, дом 43</p>
-                                <p class="dateTime">24.05.2021, 07:53</p>
-                            </figcaption>
-                        </figure>
+                    <div class="col ads highlight">
+                        <div class="ads_wrapper">
+                            <a href="#" title="Samsung SCX-4200 как новый">
+                                <img src="../img/printer_2.jpg">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#" title="Samsung SCX-4200 как новый">
+                                <h6>Samsung SCX-4200 как новый</h6>
+                            </a>
+                            <a href="#">
+                                <p class="price"> 2500 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                                <p class="address"> г. Москва</p>
+                                <p class="time">01.06.2021</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col ads highlight">
+                        <div class="ads_wrapper">
+                            <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                                <img src="../img/noutebook.jpg">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
+                                <h6>Ноутбук Acer, рабочий, разбита матрица</h6>
+                            </a>
+                            <a href="#">
+                                <p class="price"> 4000 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
+                                <p class="address"> г. Владивосток, ул. Шоссейная</p>
+                                <p class="time">01.06.2021</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
