--- a/index_autorized.html
+++ b/index_autorized.html
@@ -98,18 +98,41 @@
                 <a href="#">
                     <img class="logo2" src="/img/logo.png" alt="ProdaiZip.ru">
                 </a>
-
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-bell fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-search fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-list fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-comment fa-stack-1x"></i>
+                </span>
+                </a>
                 <a href="#" class="notice">
-                <span class="fa-stack fa-1x" data-count="0">
+                <span class="fa-stack fa-1x has-badge" data-count="6">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-star fa-stack-1x"></i>
                 </span>
                 </a>
                 <a href="#" class="btn btn-info">
-                    Войти
+                    Выйти
                 </a>
-                <a href="#" class="profileimg">
-                    <img src="/img/profile-default.png" alt="Профиль">
+                <a href="#" class="profileimg log-in">
+                    <img src="/img/840px-Elon-musk-850.jpg" alt="Профиль">
                 </a>
                 <a href="#" class="btn btn-danger">
                     Подать объявление
@@ -1034,7 +1057,6 @@
         <div class="row justify-content-around">
             <div class="col-12 text-center priziv">
                 <h2>Начните зарабатывать сейчас</h2>
-                <button class="btn btn-warning">Зарегистрироваться</button>
                 <button class="btn btn-danger">Подать объявление</button>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
