Сделал хлебные крошки Работаю над карточкой продуктк

--- a/pages/category.html
+++ b/pages/category.html
@@ -142,7 +142,6 @@
         </div>
     </div>
 </div>
-<!--Основной контент сайта-->
 <!--Блок поиска-->
 <div class="container">
     <form action="#">
@@ -170,20 +169,26 @@
         </div>
     </form>
 </div>
-<!--Допустимые категории-->
+<!--Основной контент сайта-->
+<!-- Хлебные крошки -->
 <div class="container">
-    <div class="row permiss_category">
-        <div class="col-12">
-            <a href="#">Продажа принтеров / копиров</a>
-            <a href="#">Принтеры / копиры на запчасти</a>
-            <a href="#">Запчасти для принтеров / копиров</a>
-            <h1>Продажа принтеров / копиров<span>24224 шт.</span></h1>
-        </div>
+    <div class="row">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
+                <li class="breadcrumb-item active">Продажа принтеров / копиров</li>
+            </ol>
+        </nav>
     </div>
 </div>
 <!--Блок фильтров и объявлений-->
 <div class="container">
     <div class="row">
+<!-- Заголовок раздела -->
+        <div class="col-12">
+            <h1>Продажа принтеров / копиров<span>24224 шт.</span></h1>
+        </div>
 <!--Блок фильтров-->
         <div class="col-12 col-sm-4 col-md-3 col-lg-3 order-1 order-sm-0">
             <form>
