--- a/pages/product.html
+++ b/pages/product.html
@@ -167,49 +167,61 @@
                 </div>
             </form>
         </div>
-
-<!--Подвал сайта-->
-    <div class="container-fluid podval">
-        <div class="row justify-content-around">
-            <div class="col-12 text-center priziv">
-                <h2>Начните зарабатывать сейчас</h2>
-                <button class="btn btn-danger">Подать объявление</button>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-                <h5><i class="fa fa-list"></i>Услуги</h5>
-                <p><a href="#">Подать объявление</a></p>
-                <p><a href="#">Горящий запрос</a></p>
-                <p><a href="#">Безопасная сделка</a></p>
-                <p><a href="#">Размещение рекламы</a></p>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-                <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
-                <p><a href="#">Обратная связь</a></p>
-                <p><a href="#">Сотрудничество</a></p>
-                <p><a href="#">Жалоба на объявление</a></p>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-                <h5><i class="fa fa-info"></i>Информация</h5>
-                <p><a href="#">О компании</a></p>
-                <p><a href="#">Политика безопасности</a></p>
-                <p><a href="#">Условия и соглашения</a></p>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-                <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
-                <p><a href="#">Мои объявления</a></p>
-                <p><a href="#">Мои запросы</a></p>
-                <p><a href="#">Мои сообщения</a></p>
-                <p><a href="#">Избранное</a></p>
-                <p><a href="#">Кошелек</a></p>
-                <p><a href="#">Профиль</a></p>
-            </div>
-            <div class="col-12 podvalCopyright">
-                <hr>
-                <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
-                <h6>Все права защищены. ProdaiZIP©</h6>
+<!-- Хлебные крошки -->
+        <div class="container">
+            <div class="row">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                        <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
+                        <li class="breadcrumb-item active">Продажа принтеров / копиров</li>
+                    </ol>
+                </nav>
             </div>
         </div>
     </div>
+<!--Подвал сайта-->
+    <div class="container-fluid podval">
+    <div class="row justify-content-around">
+        <div class="col-12 text-center priziv">
+            <h2>Начните зарабатывать сейчас</h2>
+            <button class="btn btn-danger">Подать объявление</button>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-list"></i>Услуги</h5>
+            <p><a href="#">Подать объявление</a></p>
+            <p><a href="#">Горящий запрос</a></p>
+            <p><a href="#">Безопасная сделка</a></p>
+            <p><a href="#">Размещение рекламы</a></p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
+            <p><a href="#">Обратная связь</a></p>
+            <p><a href="#">Сотрудничество</a></p>
+            <p><a href="#">Жалоба на объявление</a></p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-info"></i>Информация</h5>
+            <p><a href="#">О компании</a></p>
+            <p><a href="#">Политика безопасности</a></p>
+            <p><a href="#">Условия и соглашения</a></p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
+            <p><a href="#">Мои объявления</a></p>
+            <p><a href="#">Мои запросы</a></p>
+            <p><a href="#">Мои сообщения</a></p>
+            <p><a href="#">Избранное</a></p>
+            <p><a href="#">Кошелек</a></p>
+            <p><a href="#">Профиль</a></p>
+        </div>
+        <div class="col-12 podvalCopyright">
+            <hr>
+            <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
+            <h6>Все права защищены. ProdaiZIP©</h6>
+        </div>
+    </div>
+</div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
