--- a/pages/category.html
+++ b/pages/category.html
@@ -309,7 +309,7 @@
                         <a href="#">
                             <p class="price"> 3230 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
 
-                            <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
+                            <p class="address">г. Самара</p>
                             <p class="time">Сегодня, 11:34</p>
                         </a>
                     </div>
