--- a/pages/product.html
+++ b/pages/product.html
@@ -10,90 +10,89 @@
 
     <!-- Корректировка стиля. -->
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/main.css">
+
     <link rel="stylesheet" href="../css/ads_views.css">
-    <link rel="stylesheet" href="../css/category.css">
 
     <title>Продам принтер HP 1010 как новый!</title>
 </head>
 <body>
-<!--Меню для маленьких экранов-->
-<nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
-    <div class="container-fluid">
-        <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
-            <i class="fa fa-search"></i>
-        </button>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
-            <i class="fa fa-user"></i>
-        </button>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-            <i class="fa fa-list"></i>
-        </button>
-    </div>
-    <div class="collapse navbar-collapse" id="search">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <form class="form">
-                    <label for="searchInput">Что вы ищете</label>
-                    <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
-                    <label for="searchCategory">Категория</label>
-                    <select class="form-control" id="searchCategory">
-                        <option>Принтеры/копиры</option>
-                        <option>Телефоны</option>
-                        <option>Планшеты</option>
-                        <option>Ноутбуки</option>
-                        <option>Мониторы/телевизоры</option>
-                        <option>Компьютеры/комплектующие</option>
-                        <option>Расходные материалы</option>
-                        <option>Прочее</option>
-                    </select>
-                    <label for="searchCity">Местоположение</label>
-                    <input id="searchCity" class="form-control " type="text" placeholder="Город">
-                    <button class="btn btn-success" type="submit">Поиск</button>
-                    <button class="btn btn-danger" type="submit">Сброс</button>
-                </form>
-            </li>
-        </ul>
-    </div>
-    <div class="collapse navbar-collapse" id="profile">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Войти</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Зарегистрироваться</a>
-            </li>
-        </ul>
-    </div>
-    <div class="collapse navbar-collapse" id="menu">
-        <ul class="navbar-nav">
-            <div class="menuMobile">
-                <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
-                <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
-            </div>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Главная</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Все объявления</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Услуги</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Обратная связь</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">О компании</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<!--Основной контент сайта-->
+<header>
+    <!--Меню для маленьких экранов-->
+    <nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
+                <i class="fa fa-search"></i>
+            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
+                <i class="fa fa-user"></i>
+            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
+                <i class="fa fa-list"></i>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="search">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <form class="form">
+                        <label for="searchInput">Что вы ищете</label>
+                        <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
+                        <label for="searchCategory">Категория</label>
+                        <select class="form-control" id="searchCategory">
+                            <option>Принтеры/копиры</option>
+                            <option>Телефоны</option>
+                            <option>Планшеты</option>
+                            <option>Ноутбуки</option>
+                            <option>Мониторы/телевизоры</option>
+                            <option>Компьютеры/комплектующие</option>
+                            <option>Расходные материалы</option>
+                            <option>Прочее</option>
+                        </select>
+                        <label for="searchCity">Местоположение</label>
+                        <input id="searchCity" class="form-control " type="text" placeholder="Город">
+                        <button class="btn btn-success" type="submit">Поиск</button>
+                        <button class="btn btn-danger" type="submit">Сброс</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+        <div class="collapse navbar-collapse" id="profile">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Войти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Зарегистрироваться</a>
+                </li>
+            </ul>
+        </div>
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav">
+                <div class="menuMobile">
+                    <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
+                    <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Все объявления</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Услуги</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Обратная связь</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">О компании</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--Меню и поиск-->
     <div class="container">
-<!--Верхнее меню-->
+        <!--Верхнее меню-->
         <div class="row">
             <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
                 <a href="#">
@@ -140,93 +139,152 @@
                 </a>
             </div>
         </div>
-<!--Блок поиска-->
-        <div class="container">
-            <form action="#">
-                <div class="form-row search_category">
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <select class="form-control" id="selectCategory">
-                            <option>Принтеры/копиры</option>
-                            <option>--Продажа принтеров/копиров</option>
-                            <option>--Принтеры/копиры на запчасти</option>
-                            <option>--Запчасти для принтеров/копиров</option>
-                            <option>----Блоки лазера/сканера/Сканирующие линейки</option>
-                            <option>----Блоки питания</option>
-                            <option>----Блоки проявки</option>
-                        </select>
-                    </div>
-                    <div class="col-12 col-md-8 col-lg-6">
-                        <input type="text" class="form-control" placeholder="Что вы ищете">
-                    </div>
-                    <div class="col-12 col-md-4 col-lg-2">
-                        <input type="text" class="form-control" placeholder="Местоположение">
-                    </div>
-                    <div class="col-12 col-md-4 col-lg-1">
-                        <button type="submit" class="btn btn-warning">Поиск</button>
-                    </div>
+        <!--Блок поиска-->
+        <form action="#">
+            <div class="row search">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <select class="form-control" id="selectCategory">
+                        <option>Принтеры/копиры</option>
+                        <option>--Продажа принтеров/копиров</option>
+                        <option>--Принтеры/копиры на запчасти</option>
+                        <option>--Запчасти для принтеров/копиров</option>
+                        <option>----Блоки лазера/сканера/Сканирующие линейки</option>
+                        <option>----Блоки питания</option>
+                        <option>----Блоки проявки</option>
+                    </select>
                 </div>
-            </form>
+                <div class="col-12 col-md-8 col-lg-6">
+                    <input type="text" class="form-control" placeholder="Что вы ищете">
+                </div>
+                <div class="col-12 col-md-4 col-lg-2">
+                    <input type="text" class="form-control" placeholder="Местоположение">
+                </div>
+                <div class="col-12 col-md-4 col-lg-1">
+                    <button type="submit" class="btn btn-warning search_btn-search">Поиск</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</header>
+
+<!--Основной контент сайта-->
+ <div class="container">
+     <!-- Хлебные крошки -->
+     <div class="row">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
+                    <li class="breadcrumb-item active"><a href="#">Продажа принтеров / копиров</a></li>
+                    <li class="breadcrumb-item active">Продам принтер HP 1010 как новый!</li>
+                </ol>
+            </nav>
         </div>
-<!-- Хлебные крошки -->
-        <div class="container">
-            <div class="row">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                        <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
-                        <li class="breadcrumb-item active">Продажа принтеров / копиров</li>
-                    </ol>
-                </nav>
+     <!-- Контент -->
+     <div class="row">
+         <!-- Заголовок раздела -->
+         <h1>
+             Продам принтер HP 1010 как новый!
+         </h1>
+         <!-- Колонка объявления -->
+         <div class="col-sm-9 col-md-9 col-lg-9">
+             <div class="row">
+                 <!-- Блок фото -->
+                 <div class="col-8">
+                     <img src="../img/printer_2.jpg" class="img-fluid" alt="">
+                 </div>
+                 <!-- Блок информации -->
+                 <div class="col-4">
+                     <h2>3230 ₽</h2>
+                     <p>Дата: Сегодня 11:34</p>
+                     <p>г. Самара</p>
+                     <button type="button" class="btn btn-primary">
+                         Купить
+                     </button>
+                     <button type="button" class="btn btn-warning">
+                         Написать продавцу
+                     </button>
+                     <ul>
+                         <li>
+                             <span>Бренд: </span>
+                             <span>HP</span>
+                         </li>
+                         <li>
+                             <span>Модель: </span>
+                             <span>LJ 1010</span>
+                         </li>
+                     </ul>
+                 </div>
+                 
+             </div>
+
+         </div>
+         <!-- Правая колонка -->
+         <div class="col-sm-3 col-md-3 col-lg-3">
+             <div>
+                 <a href="#">Добавить в избранное</a>
+                 <br>
+                 <a href="#">Добавить заметку</a>
+             </div>
+             <div>
+                 Блок под рекламный баннер
+             </div>
+             <div>
+                 Блок рейтинга с отзывами на Модель принтера
+             </div>
+         </div>
+
+     </div>
+
+ </div>
+<!--Подвал сайта-->
+<footer>
+    <div class="container-fluid podval">
+        <div class="row justify-content-around">
+            <div class="col-12 text-center priziv">
+                <h2>Начните зарабатывать сейчас</h2>
+                <button class="btn btn-danger">Подать объявление</button>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+                <h5><i class="fa fa-list"></i>Услуги</h5>
+                <p><a href="#">Подать объявление</a></p>
+                <p><a href="#">Горящий запрос</a></p>
+                <p><a href="#">Безопасная сделка</a></p>
+                <p><a href="#">Размещение рекламы</a></p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+                <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
+                <p><a href="#">Обратная связь</a></p>
+                <p><a href="#">Сотрудничество</a></p>
+                <p><a href="#">Жалоба на объявление</a></p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+                <h5><i class="fa fa-info"></i>Информация</h5>
+                <p><a href="#">О компании</a></p>
+                <p><a href="#">Политика безопасности</a></p>
+                <p><a href="#">Условия и соглашения</a></p>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+                <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
+                <p><a href="#">Мои объявления</a></p>
+                <p><a href="#">Мои запросы</a></p>
+                <p><a href="#">Мои сообщения</a></p>
+                <p><a href="#">Избранное</a></p>
+                <p><a href="#">Кошелек</a></p>
+                <p><a href="#">Профиль</a></p>
+            </div>
+            <div class="col-12 podvalCopyright">
+                <hr>
+                <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
+                <h6>Все права защищены. ProdaiZIP©</h6>
             </div>
         </div>
     </div>
-<!--Подвал сайта-->
-    <div class="container-fluid podval">
-    <div class="row justify-content-around">
-        <div class="col-12 text-center priziv">
-            <h2>Начните зарабатывать сейчас</h2>
-            <button class="btn btn-danger">Подать объявление</button>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-            <h5><i class="fa fa-list"></i>Услуги</h5>
-            <p><a href="#">Подать объявление</a></p>
-            <p><a href="#">Горящий запрос</a></p>
-            <p><a href="#">Безопасная сделка</a></p>
-            <p><a href="#">Размещение рекламы</a></p>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-            <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
-            <p><a href="#">Обратная связь</a></p>
-            <p><a href="#">Сотрудничество</a></p>
-            <p><a href="#">Жалоба на объявление</a></p>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-            <h5><i class="fa fa-info"></i>Информация</h5>
-            <p><a href="#">О компании</a></p>
-            <p><a href="#">Политика безопасности</a></p>
-            <p><a href="#">Условия и соглашения</a></p>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
-            <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
-            <p><a href="#">Мои объявления</a></p>
-            <p><a href="#">Мои запросы</a></p>
-            <p><a href="#">Мои сообщения</a></p>
-            <p><a href="#">Избранное</a></p>
-            <p><a href="#">Кошелек</a></p>
-            <p><a href="#">Профиль</a></p>
-        </div>
-        <div class="col-12 podvalCopyright">
-            <hr>
-            <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
-            <h6>Все права защищены. ProdaiZIP©</h6>
-        </div>
-    </div>
-</div>
+</footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+<script src="../js/main.js"></script>
 
 </body>
 </html>
