--- a/pages/product.html
+++ b/pages/product.html
@@ -10,7 +10,6 @@
 
     <!-- Корректировка стиля. -->
     <link rel="stylesheet" href="../css/global.css">
-
     <link rel="stylesheet" href="../css/ads_views.css">
 
     <title>Продам принтер HP 1010 как новый!</title>
@@ -168,7 +167,7 @@
 </header>
 
 <!--Основной контент сайта-->
- <div class="container">
+ <div class="container ads-block">
      <!-- Хлебные крошки -->
      <div class="row">
             <nav aria-label="breadcrumb">
@@ -193,29 +192,106 @@
                  <div class="col-8">
                      <img src="../img/printer_2.jpg" class="img-fluid" alt="">
                  </div>
-                 <!-- Блок информации -->
+                 <!-- Блок информации о товаре и продавце -->
                  <div class="col-4">
                      <h2>3230 ₽</h2>
-                     <p>Дата: Сегодня 11:34</p>
-                     <p>г. Самара</p>
+                     <p>Дата: Сегодня 11:34<br>г. Самара</p>
+                     <button type="button" class="btn btn-info">
+                         Безопасная покупка
+                     </button>
                      <button type="button" class="btn btn-primary">
                          Купить
                      </button>
                      <button type="button" class="btn btn-warning">
                          Написать продавцу
                      </button>
-                     <ul>
-                         <li>
-                             <span>Бренд: </span>
-                             <span>HP</span>
+                     <!-- Характеристики товара -->
+                     <div>
+                         <div class="specific-title">Бренд:</div>
+                         <div class="specific-value">HP</div>
+                         <div class="specific-title">Модель:</div>
+                         <div class="specific-value">LJ 1010</div>
+                         <div class="specific-title">Технология печати:</div>
+                         <div class="specific-value">Лазерный</div>
+                         <div class="specific-title">Цветность:</div>
+                         <div class="specific-value">Черно-белый</div>
+                         <div class="specific-title">Тип устройства:</div>
+                         <div class="specific-value">Принтер</div>
+                         <div class="specific-title">Пробег:</div>
+                         <div class="specific-value">Н/У</div>
+                         <div class="specific-title">Макс. формат:</div>
+                         <div class="specific-value">A4</div>
+                         <div class="specific-title">Комплектация:</div>
+                         <div class="specific-value">USB кабель, кабель питания, драйверы</div>
+                         <a href="#">Все характеристики</a>
+                     </div>
+                     <hr>
+                     <!-- Информация о продавце -->
+                     <div class="ads-block__seller-block">
+                         <div class="ads-block__seller-block__descrip">
+                             Имя продавца
+                             <br>
+                             Рейтинг
+                             <br>
+                             Тип продавца
+                             <br>
+                             Зарегистрирован
+                         </div>
+                         <div class="ads-block__seller-block__logo">
+                             Логотип
+                         </div>
+                         <button type="button" class="btn btn-primary">
+                             Показать контакты
+                         </button>
+                     </div>
+                 </div>
+                 <!-- Блок подробно о товаре -->
+                 <div class="col-12">
+                     <ul class="nav nav-pills">
+                         <li class="nav-item">
+                             <a href="#auth_tab_modal" class="nav-link active" data-toggle="tab">
+                                 Описание
+                             </a>
                          </li>
-                         <li>
-                             <span>Модель: </span>
-                             <span>LJ 1010</span>
+                         <li class="nav-item">
+                             <a href="#register_tab_modal" class="nav-link" data-toggle="tab">
+                                 Характеристики
+                             </a>
                          </li>
                      </ul>
+                     <div class="tab-content">
+                         <div class="tab-pane fade show active" id="auth_tab_modal">
+                             <form action="">
+                                 <div class="form-group">
+                                     <label for="input_login" class="col-form-label">
+                                         Телефон или e-mail
+                                     </label>
+                                     <input type="text" id="input_login" class="form-control" placeholder="Телефон или e-mail">
+                                     <label for="input_password" class="col-form-label">
+                                         Пароль
+                                     </label>
+                                     <input type="password" id="input_password" class="form-control" placeholder="Пароль">
+                                 </div>
+                                 <button type="submit" title="Войти с паролем" class="btn btn-primary">
+                                     Войти с паролем
+                                 </button>
+                             </form>
+                         </div>
+                         <div class="tab-pane fade" id="register_tab_modal">
+                             <form action="">
+                                 <div class="form-group">
+                                     <label for="input_login_new" class="col-form-label">
+                                         Телефон или e-mail
+                                     </label>
+                                     <input type="text" id="input_login_new" class="form-control" placeholder="Телефон или e-mail">
+                                 </div>
+                                 <button type="submit" title="Выслать СМС/Письмо с паролем" class="btn btn-primary">
+                                     Выслать СМС/Письмо с паролем
+                                 </button>
+                             </form>
+                         </div>
+                     </div>
                  </div>
-                 
              </div>
 
          </div>
